@@ -25,12 +25,12 @@ DESCRIPTION
 
        patool supports 7z (.7z), ACE (.ace), ALZIP (.alz), APE (.ape),
        AR (.a), ARC (.arc), ARJ (.arj), BZIP2 (.bz2), CAB (.cab), com‐
-       press (.Z), CPIO (.cpio), DEB (.deb), DMS (.dms),  GZIP  (.gz),
-       LRZIP  (.lrz), LZH (.lha, .lzh), LZIP (.lz), LZMA (.lzma), LZOP
-       (.lzo), RPM (.rpm), RAR (.rar), RZIP  (.rz),  SHN  (.shn),  TAR
-       (.tar),  XZ (.xz), ZIP (.zip, .jar) and ZOO (.zoo) formats.  It
-       relies on helper applications to handle those  archive  formats
-       (for example bzip2 for BZIP2 archives).
+       press (.Z), CPIO (.cpio), DEB (.deb), DMS (.dms), FLAC (.flac),
+       GZIP  (.gz),  LRZIP  (.lrz), LZH (.lha, .lzh), LZIP (.lz), LZMA
+       (.lzma), LZOP (.lzo), RPM (.rpm), RAR (.rar), RZIP  (.rz),  SHN
+       (.shn),  TAR  (.tar), XZ (.xz), ZIP (.zip, .jar) and ZOO (.zoo)
+       formats.  It relies on helper applications to handle those  ar‐
+       chive formats (for example bzip2 for BZIP2 archives).
 
        The  archive  formats  TAR (.tar), ZIP (.zip), BZIP2 (.bz2) and
        GZIP (.gz) are supported natively and  do  not  require  helper
