@@ -54,6 +54,10 @@ def list_shn (archive, compression, cmd, **kwargs):
     """List a SHN archive."""
     return stripext(cmd, archive, extension=".wav")
 
+def list_flac (archive, compression, cmd, **kwargs):
+    """List a FLAC archive."""
+    return stripext(cmd, archive, extension=".wav")
+
 def stripext (cmd, archive, extension=""):
     """Print the name without suffix."""
     print util.stripext(archive)+extension
