@@ -2,6 +2,7 @@
 
 * Added support for Monkey's Audio Compressor handling APE (.ape) files.
 * Added support for shorten handling SHN (.shn) files.
+* Added support for flac handling FLAC (.flac) files.
 
 
 0.16 "Game of thrones" (released 12.5.2012)
